fixed a centering layout issue in Firefox

--- a/css/main.styl
+++ b/css/main.styl
@@ -13,6 +13,7 @@ a
 a:hover
 	text-decoration underline
 body
+	width 100%
 	font-family 'PigeonRegular'
 	display -webkit-box
 	-webkit-box-orient vertical
